--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cássia Prompt V8 | Singularity Enterprise</title>
+    <title>Cássia Prompt V8 | Enterprise Singularity</title>
     
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -19,10 +19,10 @@
         }
 
         [data-theme="dark"] {
-            --ms-bg: #111111;
-            --ms-card: #1b1b1b;
-            --ms-text: #ffffff;
-            --ms-border: #333333;
+            --ms-bg: #0b0b0b;
+            --ms-card: #161616;
+            --ms-text: #f5f5f5;
+            --ms-border: #2d2d2d;
         }
 
         body {
@@ -30,205 +30,242 @@
             background-color: var(--ms-bg);
             color: var(--ms-text);
             margin: 0;
+            transition: background 0.3s, color 0.3s;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            transition: 0.2s ease;
             min-height: 100vh;
         }
 
-        .navbar {
-            width: 100%;
+        .nav-enterprise {
             background: var(--ms-card);
-            padding: 12px 40px;
+            padding: 15px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             border-bottom: 1px solid var(--ms-border);
-            box-sizing: border-box;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
 
-        .main-container {
-            width: 95%;
-            max-width: 1100px;
-            margin: 40px 0;
+        .main-app {
+            flex: 1;
+            width: 90%;
+            max-width: 1050px;
+            margin: 40px auto;
             background: var(--ms-card);
             padding: 40px;
             border-radius: 4px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
             border: 1px solid var(--ms-border);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
         }
 
-        .v8-header { border-left: 5px solid var(--ms-blue); padding-left: 20px; margin-bottom: 35px; }
-        .v8-header h1 { margin: 0; font-size: 2rem; font-weight: 600; }
+        .v8-accent-title {
+            font-size: 2.2rem;
+            font-weight: 700;
+            letter-spacing: -1px;
+            color: var(--ms-blue);
+            margin: 0;
+        }
 
-        .upload-zone {
+        .pdf-drop-zone {
+            margin: 30px 0;
+            padding: 30px;
             border: 2px dashed var(--ms-blue);
-            padding: 20px;
+            background: rgba(0, 120, 212, 0.03);
             text-align: center;
-            margin-bottom: 30px;
-            border-radius: 4px;
-            background: rgba(0, 120, 212, 0.05);
+            border-radius: 8px;
             cursor: pointer;
+            font-weight: 600;
+            transition: 0.2s;
         }
 
-        .input-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 25px; }
-        .group { display: flex; flex-direction: column; }
-        label { font-size: 0.8rem; font-weight: 600; margin-bottom: 8px; color: var(--ms-blue); text-transform: uppercase; }
+        .pdf-drop-zone:hover { background: rgba(0, 120, 212, 0.08); }
+
+        .form-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 25px;
+            margin-top: 25px;
+        }
+
+        label { display: block; font-size: 0.75rem; font-weight: 700; text-transform: uppercase; color: var(--ms-blue); margin-bottom: 8px; }
 
         input, textarea {
+            width: 100%;
             background: var(--ms-bg);
             color: var(--ms-text);
             border: 1px solid var(--ms-border);
-            padding: 14px;
-            border-radius: 2px;
+            padding: 15px;
+            border-radius: 4px;
+            box-sizing: border-box;
             font-size: 1rem;
             outline: none;
         }
 
-        textarea { height: 280px; resize: vertical; }
+        textarea { height: 300px; resize: vertical; }
 
-        .btn-v8 {
+        .btn-execute {
             background: var(--ms-blue);
-            color: white;
+            color: #fff;
             border: none;
-            padding: 16px 40px;
-            font-weight: 600;
-            cursor: pointer;
+            padding: 20px;
             width: 100%;
-            margin-top: 15px;
+            font-weight: 700;
+            font-size: 1rem;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 25px;
             text-transform: uppercase;
         }
 
-        .btn-v8:hover { background: #005a9e; }
+        #outputArea {
+            margin-top: 40px;
+            padding: 30px;
+            background: var(--ms-bg);
+            border-left: 6px solid var(--ms-blue);
+            display: none;
+        }
 
-        .footer-disclaimer {
-            margin-top: auto;
+        .footer-legal-block {
+            background: var(--ms-card);
             padding: 40px;
-            text-align: center;
             font-size: 0.75rem;
-            color: #605e5c;
-            max-width: 900px;
+            color: #707070;
+            text-align: center;
+            border-top: 1px solid var(--ms-border);
             line-height: 1.6;
         }
 
-        #output { margin-top: 30px; padding: 25px; background: rgba(0, 120, 212, 0.05); border: 1px solid var(--ms-blue); display: none; }
+        .btn-theme {
+            background: var(--ms-blue);
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
 
-<nav class="navbar">
-    <div style="font-weight: 700; font-size: 1.2rem;">CÁSSIA PROMPT V8 <span style="font-weight: 300;">| Enterprise</span></div>
-    <button onclick="document.documentElement.toggleAttribute('data-theme')" style="padding: 8px 15px; cursor: pointer; background: var(--ms-blue); color: white; border: none; border-radius: 2px;">ALTERAR MODO</button>
+<nav class="nav-enterprise">
+    <div style="font-weight: 800; font-size: 1.4rem;">CÁSSIA<span style="color:var(--ms-blue)">PROMPT</span> V8</div>
+    <button class="btn-theme" onclick="toggleMode()">ALTERNAR TEMA</button>
 </nav>
 
-<div class="main-container">
-    <div class="v8-header">
-        <h1>Protocolo Singularity</h1>
-        <p>Engenharia de Prompt de Alta Performance e Baixa Latência</p>
+<div class="main-app">
+    <h1 class="v8-accent-title">Singularity Enterprise</h1>
+    <p style="margin-bottom: 30px; opacity: 0.7;">Engine de Alta Performance Jurídica</p>
+
+    <div class="pdf-drop-zone" onclick="document.getElementById('pdfIn').click()">
+        📁 CLIQUE PARA IMPORTAR PDF (EXTRATAÇÃO LOCAL LGPD)
+        <input type="file" id="pdfIn" hidden accept="application/pdf" onchange="extractPDF(this)">
     </div>
 
-    <div class="upload-zone" onclick="document.getElementById('pdfInput').click()">
-        📥 CLIQUE PARA IMPORTAR PDF (PROCESSAMENTO LOCAL LGPD)
-        <input type="file" id="pdfInput" hidden accept=".pdf" onchange="processPDF(this)">
-    </div>
-
-    <div class="input-grid">
+    <div class="form-grid">
         <div class="group">
-            <label>Arquitetura de Persona</label>
+            <label>Definição de Persona</label>
             <input type="text" id="persona" placeholder="Ex: Advogado Sênior Especialista">
         </div>
         <div class="group">
-            <label>Matriz de Objetivo</label>
-            <input type="text" id="objetivo" placeholder="Ex: Contestação com Foco em Danos">
+            <label>Objetivo do Script</label>
+            <input type="text" id="objetivo" placeholder="Ex: Contestação Estratégica">
         </div>
     </div>
 
-    <div class="group">
-        <label>Núcleo de Fatos (Corpus)</label>
-        <textarea id="corpus" placeholder="Aguardando dados ou extração de PDF..."></textarea>
+    <div style="margin-top: 25px;">
+        <label>Corpus Jurídico (Dados do Caso)</label>
+        <textarea id="corpus" placeholder="Aguardando dados..."></textarea>
     </div>
 
-    <button class="btn-v8" onclick="executarV8()">EXECUTAR PROTOCOLO V8</button>
+    <button class="btn-execute" onclick="runV8()">Executar Protocolo Singularity</button>
 
-    <div id="output">
-        <label>SCRIPT V8 GERADO:</label>
-        <div id="resultText" style="white-space: pre-wrap; margin-top: 10px; font-family: monospace;"></div>
-        <button class="btn-v8" style="background:#323130; margin-top:15px;" onclick="copiar()">COPIAR RESULTADO</button>
+    <div id="outputArea">
+        <label>Comando de Elite Gerado:</label>
+        <div id="result" style="white-space: pre-wrap; font-family: monospace; margin-top: 15px;"></div>
+        <button class="btn-execute" style="background: #333; margin-top: 20px;" onclick="copyResult()">Copiar Script</button>
     </div>
 </div>
 
-<div class="footer-disclaimer">
-    <strong>AVISO DE RESPONSABILIDADE E PRIVACIDADE (LGPD):</strong><br>
-    Este sistema opera via <strong>Processamento Local</strong>: nenhum dado do seu PDF ou texto é armazenado em nossos servidores ou utilizado para treinamento de terceiros. 
-    A <strong>Cássia Prompt V8</strong> não se responsabiliza pelo uso, interpretação ou consequências jurídicas das respostas geradas pela IA através destes prompts. 
-    O resultado é uma ferramenta auxiliar de engenharia; a validação técnica e jurídica é de inteira responsabilidade do profissional consulente. 
-    Proibido o uso para geração de conteúdos prolixos ou "babozeiras" sem fundamentação.
-</div>
+<footer class="footer-legal-block">
+    <strong>ISENÇÃO DE RESPONSABILIDADE JURÍDICA E LGPD:</strong><br>
+    Este sistema é uma ferramenta de engenharia de prompt de processamento local. NENHUM dado é armazenado ou enviado para nuvem. 
+    A desenvolvedora <strong>Cássia Prompt V8</strong> NÃO se responsabiliza pelo uso final, decisões jurídicas ou consequências decorrentes dos scripts gerados. 
+    A validação da resposta da IA é de inteira e exclusiva responsabilidade do advogado consulente. 
+    Protocolo Anti-Babozeira e Zero Alucinação ativado por padrão.
+</footer>
 
 <script>
     // FIREBASE
     const firebaseConfig = { databaseURL: "https://cassiapromptv8-default-rtdb.firebaseio.com/" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-
     const id = new URLSearchParams(window.location.search).get('id');
+
     if (!id) {
-        document.body.innerHTML = '<h1>ACESSO NEGADO</h1>';
+        document.body.innerHTML = '<div style="text-align:center; padding:100px;"><h1>ACESSO NEGADO</h1></div>';
     } else {
-        db.ref('clientes/' + id).on('value', (snap) => {
-            if (!snap.val() || snap.val().status !== "ativo") {
-                document.body.innerHTML = '<h1 style="color:red; text-align:center; margin-top:100px;">LICENÇA REVOGADA - FALE COM CÁSSIA PROMPT V8</h1>';
+        db.ref('clientes/' + id).on('value', (s) => {
+            if (!s.val() || s.val().status !== "ativo") {
+                document.body.innerHTML = '<div style="text-align:center; padding:100px; color:red;"><h1>LICENÇA REVOGADA</h1></div>';
             }
         });
     }
 
-    // PDF ENGINE (LOCAL)
+    // THEME ENGINE
+    function toggleMode() {
+        const d = document.documentElement;
+        const isDark = d.getAttribute('data-theme') === 'dark';
+        isDark ? d.removeAttribute('data-theme') : d.setAttribute('data-theme', 'dark');
+    }
+
+    // PDF ENGINE
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
-    async function processPDF(input) {
+    async function extractPDF(input) {
         const file = input.files[0];
         const reader = new FileReader();
         reader.onload = async function() {
             const typedarray = new Uint8Array(this.result);
             const pdf = await pdfjsLib.getDocument(typedarray).promise;
-            let fullText = "";
+            let text = "";
             for (let i = 1; i <= pdf.numPages; i++) {
                 const page = await pdf.getPage(i);
-                const text = await page.getTextContent();
-                fullText += text.items.map(s => s.str).join(" ");
+                const content = await page.getTextContent();
+                text += content.items.map(s => s.str).join(" ");
             }
-            document.getElementById('corpus').value = fullText;
-            alert("PDF Processado Localmente com Sucesso!");
+            document.getElementById('corpus').value = text;
+            alert("PDF Importado com Sucesso!");
         };
         reader.readAsArrayBuffer(file);
     }
 
-    function executarV8() {
+    function runV8() {
         const p = document.getElementById('persona').value || "Especialista";
         const o = document.getElementById('objetivo').value || "Resultado Técnico";
         const c = document.getElementById('corpus').value;
 
-        if(!c) return alert("Insira os dados.");
+        if(!c) return alert("Erro: Corpus vazio.");
 
-        const promptV8 = `[CÁSSIA PROMPT V8 - SINGULARITY MODE]
-PERSONA: ${p}. OBJETIVO: ${o}.
+        const finalPrompt = `[CÁSSIA PROMPT V8 - SINGULARITY ENTERPRISE]
+PERSONA: ${p}. 
+OBJETIVO: ${o}.
 
-[PROTOCOLO ANTI-BABOZEIRA]
-- Ignore qualquer saudação, introdução ou conversa fiada.
-- Se os dados forem insuficientes, aponte as lacunas. Não invente nada.
-- Use linguagem técnica de alto impacto. 
-- Sem prolixidade. Vá direto ao núcleo jurídico.
+[PROTOCOLOS RÍGIDOS]
+- PROIBIDO: Prolixidade, saudações ou "babozeiras" educadas. 
+- ZERO ALUCINAÇÃO: Não invente fatos. Use apenas o corpus abaixo.
+- LACUNAS: Se faltar informação, escreva "[DADO AUSENTE]".
+- TÉCNICA: Vá direto ao ponto jurídico.
 
 CORPUS:
 "${c}"`;
 
-        document.getElementById('resultText').innerText = promptV8;
-        document.getElementById('output').style.display = 'block';
+        document.getElementById('result').innerText = finalPrompt;
+        document.getElementById('outputArea').style.display = 'block';
     }
 
-    function copiar() {
-        navigator.clipboard.writeText(document.getElementById('resultText').innerText);
-        alert("Copiado!");
+    function copyResult() {
+        navigator.clipboard.writeText(document.getElementById('result').innerText);
+        alert("Script Copiado!");
     }
 </script>
 </body>
